--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             max-width: 750px;
             width: 10rem;
             margin: 0 auto;
+            position: relative;
             overflow-y: hidden;
         }
         @media screen and (min-width:750px){
